--- a/debugger/visualeditor.css
+++ b/debugger/visualeditor.css
@@ -2,8 +2,8 @@
 * css formatting for xmlrpc / jsonrpc visual value editor
 *
 * @author Gaetano Giunta
-* @copyright (c) 2007-2013 G. Giunta
-* @license code licensed under the BSD License: http://phpxmlrpc.sourceforge.net/jsxmlrpc/license.txt
+* @copyright (c) 2007-2020 G. Giunta
+* @license code licensed under the BSD License: see LICENSE file
 */
 html { overflow: -moz-scrollbars-vertical; }
 body { margin: 0; padding: 0; background-color: white; font-family: Verdana, Arial, Helvetica; font-size: 8pt; }
