--- a/debugger/xmlrpc_tree.css
+++ b/debugger/xmlrpc_tree.css
@@ -4,8 +4,8 @@
 * Extends tree.css, container.css from YUI lib
 *
 * @author Gaetano Giunta
-* @copyright (c) 2007-2013 G. Giunta
-* @license code licensed under the BSD License: http://phpxmlrpc.sourceforge.net/jsxmlrpc/license.txt
+* @copyright (c) 2007-2020 G. Giunta
+* @license code licensed under the BSD License: see LICENSE file
 *
 * @todo fix word-wrapping of node contents for not-quite-wide-enough windows
 */
