--- a/debugger/visualeditor.css
+++ b/debugger/visualeditor.css
@@ -1,10 +1,9 @@
 /**
 * css formatting for xmlrpc / jsonrpc visual value editor
 *
-* @version $Id: visualeditor.css,v 1.2 2007/03/10 11:02:21 ggiunta Exp $
 * @author Gaetano Giunta
-* @copyright (c) 2007 G. Giunta
-* @license code licensed under the BSD License: http://phpxmlrpc.sourceforge.net/jsxmlrpc/license.txt
+* @copyright (c) 2007-2022 G. Giunta
+* @license code licensed under the BSD License: see LICENSE file
 */
 html { overflow: -moz-scrollbars-vertical; }
 body { margin: 0; padding: 0; background-color: white; font-family: Verdana, Arial, Helvetica; font-size: 8pt; }
